# antibox_engine

./: CMakeLists.txt  README.md  main.cpp
Antibox Docs/: DOCS.html  DOCS.txt
Examples/: 3d_main.cpp  caves_main.cpp  sprite_test_main.cpp  spritegrabber.cpp  ttrpg_stat_main.cpp  ttrpgimgui.ini
Libraries/include/antibox/core/: antibox.h  app.h  audio.cpp  audio.h  engine.cpp  engine.h  imguiwindow.cpp  imguiwindow.h  log.cpp  log.h  mathlib.h  window.cpp  window.h
Libraries/include/antibox/graphics/: framebuffer.cpp  framebuffer.h  helpers.cpp  helpers.h  mesh.cpp  mesh.h  rendercommands.cpp  rendercommands.h  shader.cpp  shader.h  sprite.cpp  sprite.h  texture.cpp  texture.h  vertex.cpp  vertex.h
Libraries/include/antibox/graphics/3d/: camera.cpp  camera.h
Libraries/include/antibox/managers/: factory.h  rendermanager.cpp  rendermanager.h
Libraries/include/antibox/objects/: gameobject.cpp  gameobject.h  scene.cpp  scene.h  tokenizer.h
Libraries/include/antibox/objects/3d/: model.cpp  model.h
Libraries/include/antibox/server/: server.cpp  server.hpp  utils.hpp
Libraries/include/antibox/tools/: NewFile  horror.txt  noise.cpp  noise.h  pathfinding.h
Libraries/include/glad/: egl.h  gl.h  glad.c  glad.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h  vulkansc.h  wgl.h
Libraries/include/imgui/: imgui.cpp  imgui.h
Libraries/include/miniaudio/: miniaudio.h
Libraries/lib/: glfw3.lib
Libraries/src/: vulkansc.c
